base64 encode services/objects

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "sds"]
-	path = sds
+	path = deps/sds
 	url = https://github.com/antirez/sds.git
+[submodule "deps/b64.c"]
+	path = deps/b64.c
+	url = https://github.com/littlstar/b64.c.git
