Revert "base64 encode services/objects"
This reverts commit 3399d419ccde5c9aeef7aa3dd315ead420d5542b. It didn't actually work all that well, and it broke the planned systemd D-Bus integration.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
 [submodule "sds"]
-	path = deps/sds
+	path = sds
 	url = https://github.com/antirez/sds.git
-[submodule "deps/b64.c"]
-	path = deps/b64.c
-	url = https://github.com/littlstar/b64.c.git
