Fix systemd file for automated startup

--- a/systemd/uprocd@.service
+++ b/systemd/uprocd@.service
@@ -7,4 +7,4 @@ BusName=com.refi64.uprocd.modules.%I
 ExecStart=/usr/share/uprocd/bin/uprocd + "%I"
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=default.target
