--- a/misc/uprocd@.service
+++ b/misc/uprocd@.service
@@ -6,7 +6,7 @@ Type=dbus
 BusName=com.refi64.uprocd.modules.%I
 ExecStart=/usr/share/uprocd/bin/uprocd + "%I"
 KillMode=process
-Restart=Always
+Restart=always
 
 [Install]
 WantedBy=default.target
